@@ -11,6 +11,8 @@ Version 1.1
       and "time" features
     * interpreter feature enables encodings feature to support non-ascii
       unicode literals
+    * On Python 2.x, enable CPython restricted mode if the _sandbox module is
+      missing (_sandbox becomes optional on Python 2.x).
 
 Version 1.0.3 (2010-09-16)
 
